# CloudI

./: .gitattributes  .travis.yml  LICENSE  README.markdown  rebar.config
src/: AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE  LICENSE.txt  Makefile  Makefile.am  Makefile.in  NEWS  NOTICE  README  README.markdown  TODO  _build.cfg.template  aclocal.m4  autogen.sh  build_configuration.mk  cloud.conf  cloudi.conf  cloudi.conf.in  cloudi_minimal.conf.in  cloudi_tests.conf.in  config.h.in  configure  configure.ac  linux_setcap.sh.in  make.sh  make_dev  rebar.config  rebar.config.in  rebar_dirs.sh  rebar_src.config.in  rebar_src_test.config.in  reltool.config  reltool.config.in
src/api/: Makefile.am  Makefile.in  README.markdown
src/api/c/: Makefile.am  Makefile.in  assert.cpp  assert.hpp  bind.cpp  bind.hpp  cloudi.cpp  cloudi.h  cloudi.hpp  cloudi.i  copy_ptr.hpp  nedtrie.h  realloc_ptr.hpp  timer.cpp  timer.hpp
src/api/erlang/: Makefile.am  README.markdown
src/api/go/: Makefile.am
src/api/haskell/: Makefile.am  cloudi.cabal.in
src/api/java/: Makefile.am  Makefile.in  README
src/api/javascript/: CloudI.js  Erlang.js  Makefile.am
src/api/ocaml/: Makefile.am  cloudi.ml  cloudi.mli  erlang.ml  erlang.mli
src/api/perl/: Erlang.pm  Makefile.am
src/api/php/: CloudI.php  Erlang.php  Makefile.am
src/api/python/: Makefile.am  cloud_api.py  cloudi.py  cloudi_c.py  cloudi_py.c  cloudi_py.cpp  erlang.py
src/api/ruby/: Makefile.am  Makefile.in  cloudi.rb  erlang.rb
src/api/rust/: Makefile.am  cloudi.rs  erlang.rs
src/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
src/config/: failover_hosts  rsync_exclude_list.conf  sys.config
src/docs/: CONFIGURATION.txt
src/job_api/: README.markdown
src/job_api/python/: cloudi_job_api.py
src/lib/: Makefile.am  Makefile.in  README.markdown
src/lib/asn1/: releases
src/lib/boost/: boost_1_39_0_filesystem_1.patch  boost_1_39_0_fixes.txt  releases  revision
src/lib/cgroups/: LICENSE  README.markdown
src/lib/cloud_job_stdlib/: README.markdown
src/lib/cloudi/: Makefile.am  Makefile.in
src/lib/cloudi_core/: Makefile.am  rebar.config  rebar.config.in
src/lib/cloudi_service_api_batch/: rebar.config
src/lib/cloudi_service_db_cassandra/: rebar.config
src/lib/cloudi_service_db_cassandra_cql/: README.md
src/lib/cloudi_service_db_elasticsearch/: rebar.config
src/lib/cloudi_service_db_mysql/: README.markdown  rebar.config.in
src/lib/cloudi_service_db_pgsql/: README.markdown
src/lib/cloudi_service_db_riak/: rebar.config
src/lib/cloudi_service_http_client/: rebar.config.in
src/lib/cloudi_service_oauth1/: README.markdown  rebar.config.in
src/lib/cloudi_service_queue/: rebar.config.in
src/lib/cloudi_service_quorum/: rebar.config  rebar.config.in
src/lib/cloudi_service_validate/: rebar.config  rebar.config.in
src/lib/cloudi_services_databases/: rebar.config
src/lib/cpg/: LICENSE  NOTICE  README.md
src/lib/ecouchdb/: Makefile  README.markdown
src/lib/ememcached/: README.markdown
src/lib/emysql/: README
src/lib/epgsql/: README
src/lib/erlang_term/: LICENSE  README.markdown  erlang_bugs_email.txt
src/lib/etokyotyrant/: Makefile  README
src/lib/g++/: mirrors.txt  releases
src/lib/gepd/: LICENSE.txt  README  erlang_functions_hrl.h  port.cpp  port.h  port_driver.cpp  port_driver.h  port_main.cpp  port_main.h
src/lib/gmp/: releases
src/lib/key2value/: LICENSE  README.markdown  rebar.config
src/lib/keys1value/: LICENSE  README.markdown
src/lib/mcerlang/: README.markdown
src/lib/mochiweb/: README
src/lib/pqueue/: LICENSE  README.markdown  rebar.config
src/lib/ptmalloc/: README  releases
src/lib/quickrand/: LICENSE  README.markdown
src/lib/rb/: README
src/lib/reltool_util/: LICENSE  README.markdown  ex2erl  rebar.config  release  scope
src/lib/rfc4627_jsonrpc/: Makefile  README
src/lib/service/: README.markdown
src/lib/supool/: LICENSE  README.markdown
src/lib/syslog_socket/: LICENSE  README.markdown  rebar.config.in
src/lib/trie/: LICENSE  README.markdown  generate_docs.sh
src/lib/uuid/: README.markdown
src/lib/varpool/: LICENSE  README.markdown
src/m4/: ax_backtrace.m4  ax_bind.m4  ax_boost_base.m4  ax_boost_check_header.m4  ax_boost_system.m4  ax_boost_thread.m4  ax_boost_version.m4  ax_booster_backtrace.m4  ax_cabal_version.m4  ax_check_class.m4  ax_check_header_macro.m4  ax_check_private_header.m4  ax_check_private_lib.m4  ax_check_rqrd_class.m4  ax_clock_gettime.m4  ax_compiler_vendor.m4  ax_compiler_version.m4  ax_cxx_check_header.m4  ax_cxx_exceptions.m4  ax_cxx_stdlib.m4  ax_erlang_otp_version.m4  ax_gmp.m4  ax_prog_ghc_version.m4  ax_prog_go_version.m4  ax_prog_java_works.m4  ax_prog_python_version.m4  ax_prog_ruby_version.m4  ax_pthread.m4  ax_python_c.m4  ax_search_private_libs.m4  ax_syscall_lock.m4  ax_uuid.m4  ax_zeromq.m4  ax_zeromq_erlzmq.m4  boost.m4
src/rel/files/: app.config.in  bin_script.in  cloudi  cloudi.cmd  cloudi.in  default.args.in  erl.in  nodetool.in  tests.args.in  vm.args  vm.args.in  vm.config.in
src/service_api/: Makefile.am  README.markdown
src/service_api/dashboard/: Makefile.am  README.md  code_path.html  index.html  log_settings.html  nodes.html  service_summary.html  view_log.html
src/service_api/python/: Makefile.am  cloudi_service_api.py
src/tests/: Makefile.am  Makefile.in  rebar.config
src/tests/count/: CountTask.pm  Makefile.am  count.js  count.php  count.py  count.rb  count_c.py
src/tests/ct/: cassandra_types.hrl  erlang_cassandra_SUITE.erl  test_SUITE.erl
src/tests/echo/: Makefile.am  echo.py  multipart.sh
src/tests/environment/: Makefile.am  environment.py
src/tests/eunit/: empty.erl
src/tests/flood/: Makefile.am  Makefile.in
src/tests/hexpi/: Makefile.am  Makefile.in  README.markdown
src/tests/http/: Makefile.am  Makefile.in  http.py  http.rb  run.sh  service.py
src/tests/http_req/: Makefile.am  Makefile.in  README  README.markdown  http_req.js  http_req.php  http_req.pl  http_req.py  http_req.rb  http_req_c.py
(+5747 files in other folders)
